--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Pricing Card</title>
-    <link rel="stylesheet" href="./style.css">
+    <title>My Website</title>
+    <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Karla:wght@400;700&display=swap" rel="stylesheet">
   </head>
   <body>
@@ -24,7 +24,8 @@
                 </div>
                     <p>Full access for less than $1 a day</p>
                     <button onclick="alertUser()">Sign up</button>           
-            </div><div id="bottom-right-section">
+            </div>
+            <div id="bottom-right-section">
                 <h4>Why Us</h4>
                 <ul>
                     <li>Tutorials by industy expert</li>
